# kkbox2applemusic

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
launchagent/: com.kkbox2applemusic.daily.plist  com.kkbox2applemusic.weekly.plist
src/kkbox2applemusic/: auth.py  cli.py  exporter.py  matcher.py  parser.py  pusher.py  scraper.py
tests/: test_auth.py  test_exporter.py  test_matcher.py  test_parser.py  test_pusher.py  test_scraper.py
tests/fixtures/: sample.kbl
